refactor DemoSwagger project
