# examples/pet-client/swagger.json
@@ -11,114 +11,9 @@
     }
   ],
   "paths": {
-    "/primitive/String": {
-      "get": {
-        "tags": [
-          "PrimitiveReturn"
-        ],
-        "operationId": "PrimitiveReturn_String",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/primitive/Number": {
-      "get": {
-        "tags": [
-          "PrimitiveReturn"
-        ],
-        "operationId": "PrimitiveReturn_Number",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "integer",
-                  "format": "int32"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/primitive/Bool": {
-      "get": {
-        "tags": [
-          "PrimitiveReturn"
-        ],
-        "operationId": "PrimitiveReturn_Boolean",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "boolean"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/primitive/DateOnly": {
-      "get": {
-        "tags": [
-          "PrimitiveReturn"
-        ],
-        "operationId": "PrimitiveReturn_DateOnly",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string",
-                  "format": "date"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/primitive/DateTime": {
-      "get": {
-        "tags": [
-          "PrimitiveReturn"
-        ],
-        "operationId": "PrimitiveReturn_DateTime",
-        "responses": {
-          "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "string",
-                  "format": "date-time"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/array/String": {
       "get": {
-        "tags": [
-          "ArrayReturn"
-        ],
+        "tags": ["ArrayReturn"],
         "operationId": "ArrayReturn_String",
         "responses": {
           "200": {
@@ -139,9 +34,7 @@
     },
     "/array/Number": {
       "get": {
-        "tags": [
-          "ArrayReturn"
-        ],
+        "tags": ["ArrayReturn"],
         "operationId": "ArrayReturn_Number",
         "responses": {
           "200": {
@@ -163,9 +56,7 @@
     },
     "/array/Bool": {
       "get": {
-        "tags": [
-          "ArrayReturn"
-        ],
+        "tags": ["ArrayReturn"],
         "operationId": "ArrayReturn_Boolean",
         "responses": {
           "200": {
@@ -186,9 +77,7 @@
     },
     "/array/DateOnly": {
       "get": {
-        "tags": [
-          "ArrayReturn"
-        ],
+        "tags": ["ArrayReturn"],
         "operationId": "ArrayReturn_DateOnly",
         "responses": {
           "200": {
@@ -210,9 +99,7 @@
     },
     "/array/DateTime": {
       "get": {
-        "tags": [
-          "ArrayReturn"
-        ],
+        "tags": ["ArrayReturn"],
         "operationId": "ArrayReturn_DateTime",
         "responses": {
           "200": {
@@ -234,9 +121,7 @@
     },
     "/array/Dummy": {
       "get": {
-        "tags": [
-          "ArrayReturn"
-        ],
+        "tags": ["ArrayReturn"],
         "operationId": "ArrayReturn_DummyDto",
         "responses": {
           "200": {
@@ -257,9 +142,7 @@
     },
     "/dictionary-array/String": {
       "get": {
-        "tags": [
-          "DictionaryArrayReturn"
-        ],
+        "tags": ["DictionaryArrayReturn"],
         "operationId": "DictionaryArrayReturn_String",
         "responses": {
           "200": {
@@ -283,9 +166,7 @@
     },
     "/dictionary-array/Number": {
       "get": {
-        "tags": [
-          "DictionaryArrayReturn"
-        ],
+        "tags": ["DictionaryArrayReturn"],
         "operationId": "DictionaryArrayReturn_Number",
         "responses": {
           "200": {
@@ -310,9 +191,7 @@
     },
     "/dictionary-array/Bool": {
       "get": {
-        "tags": [
-          "DictionaryArrayReturn"
-        ],
+        "tags": ["DictionaryArrayReturn"],
         "operationId": "DictionaryArrayReturn_Boolean",
         "responses": {
           "200": {
@@ -336,9 +215,7 @@
     },
     "/dictionary-array/DateOnly": {
       "get": {
-        "tags": [
-          "DictionaryArrayReturn"
-        ],
+        "tags": ["DictionaryArrayReturn"],
         "operationId": "DictionaryArrayReturn_DateOnly",
         "responses": {
           "200": {
@@ -363,9 +240,7 @@
     },
     "/dictionary-array/DateTime": {
       "get": {
-        "tags": [
-          "DictionaryArrayReturn"
-        ],
+        "tags": ["DictionaryArrayReturn"],
         "operationId": "DictionaryArrayReturn_DateTime",
         "responses": {
           "200": {
@@ -390,9 +265,7 @@
     },
     "/dictionary-array/Dummy": {
       "get": {
-        "tags": [
-          "DictionaryArrayReturn"
-        ],
+        "tags": ["DictionaryArrayReturn"],
         "operationId": "DictionaryArrayReturn_DummyDto",
         "responses": {
           "200": {
@@ -416,9 +289,7 @@
     },
     "/dictionary/String": {
       "get": {
-        "tags": [
-          "DictionaryReturn"
-        ],
+        "tags": ["DictionaryReturn"],
         "operationId": "DictionaryReturn_String",
         "responses": {
           "200": {
@@ -439,9 +310,7 @@
     },
     "/dictionary/Number": {
       "get": {
-        "tags": [
-          "DictionaryReturn"
-        ],
+        "tags": ["DictionaryReturn"],
         "operationId": "DictionaryReturn_Number",
         "responses": {
           "200": {
@@ -463,9 +332,7 @@
     },
     "/dictionary/Bool": {
       "get": {
-        "tags": [
-          "DictionaryReturn"
-        ],
+        "tags": ["DictionaryReturn"],
         "operationId": "DictionaryReturn_Boolean",
         "responses": {
           "200": {
@@ -486,9 +353,7 @@
     },
     "/dictionary/DateOnly": {
       "get": {
-        "tags": [
-          "DictionaryReturn"
-        ],
+        "tags": ["DictionaryReturn"],
         "operationId": "DictionaryReturn_DateOnly",
         "responses": {
           "200": {
@@ -510,9 +375,7 @@
     },
     "/dictionary/DateTime": {
       "get": {
-        "tags": [
-          "DictionaryReturn"
-        ],
+        "tags": ["DictionaryReturn"],
         "operationId": "DictionaryReturn_DateTime",
         "responses": {
           "200": {
@@ -534,9 +397,7 @@
     },
     "/dictionary/Dummy": {
       "get": {
-        "tags": [
-          "DictionaryReturn"
-        ],
+        "tags": ["DictionaryReturn"],
         "operationId": "DictionaryReturn_DummyDto",
         "responses": {
           "200": {
@@ -548,6 +409,202 @@
                   "additionalProperties": {
                     "$ref": "#/components/schemas/DummyDto"
                   }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/primitive/String": {
+      "get": {
+        "tags": ["PrimitiveReturn"],
+        "operationId": "PrimitiveReturn_String",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/primitive/Number": {
+      "get": {
+        "tags": ["PrimitiveReturn"],
+        "operationId": "PrimitiveReturn_Number",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/primitive/Bool": {
+      "get": {
+        "tags": ["PrimitiveReturn"],
+        "operationId": "PrimitiveReturn_Boolean",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/primitive/DateOnly": {
+      "get": {
+        "tags": ["PrimitiveReturn"],
+        "operationId": "PrimitiveReturn_DateOnly",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "date"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/primitive/DateTime": {
+      "get": {
+        "tags": ["PrimitiveReturn"],
+        "operationId": "PrimitiveReturn_DateTime",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "date-time"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/query/JsonInQuery": {
+      "get": {
+        "tags": ["Query"],
+        "operationId": "Query_JsonInQuery",
+        "parameters": [
+          {
+            "name": "dto",
+            "in": "query",
+            "x-position": 1,
+            "additionalItems": {
+              "nullable": true,
+              "oneOf": [
+                {
+                  "$ref": "#/components/schemas/DummyDto"
+                }
+              ]
+            },
+            "content": {
+              "application/json": {
+                "schema": {
+                  "nullable": true,
+                  "oneOf": [
+                    {
+                      "$ref": "#/components/schemas/DummyDto"
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/query/DateOnlyInQuery": {
+      "get": {
+        "tags": ["Query"],
+        "operationId": "Query_DateOnlyInQuery",
+        "parameters": [
+          {
+            "name": "date",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "format": "date"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/query/DateTimeInQuery": {
+      "get": {
+        "tags": ["Query"],
+        "operationId": "Query_DateTimeInQuery",
+        "parameters": [
+          {
+            "name": "date",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "format": "date-time"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
