# examples/server/DemoSwagger/Controllers/Dto/DummyDto.cs
@@ -1,0 +1,8 @@
+namespace DemoSwagger;
+
+public class DummyDto
+{
+    public string Test { get; set; }
+    public DateOnly DateOnly { get; set; }
+    public DateTime DateTime { get; set; }
+}
